--- a/gatewayservice/src/main/resources/application.properties
+++ b/gatewayservice/src/main/resources/application.properties
@@ -3,5 +3,7 @@ zuul.prefix=/api
 zuul.ignored-services=*
 zuul.routes.test.path=/cs/**
 zuul.routes.test.serviceId=counterservice
+zuul.routes.hystrix.path=/countconsumer/hystrix/**
+zuul.routes.hystrix.serviceId=countconsumer
 eureka.client.serviceUrl.defaultZone=http://registryservice:8761/eureka
 spring.application.name=zuul
